# ObjectDetection

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main_test1.cpp
images/: test.xcf
include/: ObjectDetector.h
src/: Homography.cpp  KeyPoints.cpp  main.cpp
